#1057 Add ending tokens for block comments, adjust lexer for quote-, char- and comment endings